--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Calculator</title>
 </head>
+
 <body>
-    
+    <div id="calculator-container">
+
+        <div id="screen">
+            <div class="top-screen">
+
+            </div>
+            <div class="bottom-screen">
+
+            </div>
+        </div>
+        <div id="numpad-buttons">
+
+        </div>
+        <div id="operator-buttons">
+
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
