--- a/index.html
+++ b/index.html
@@ -8,20 +8,47 @@
 
 <body>
     <div id="calculator-container">
-
+        <h1>Casio</h1>
         <div id="screen">
-            <div class="top-screen">
 
+            <div class="top-screen">
+                <p class="text-top">65</p>
             </div>
             <div class="bottom-screen">
-
+                <p class="text-bottom"></p>
             </div>
         </div>
-        <div id="numpad-buttons">
+        <div id="keypad">
+            <div id="numpad-buttons">
 
-        </div>
-        <div id="operator-buttons">
+                <button value="7">7</button>
+                <button value="8">8</button>
+                <button value="9">9</button>
+                <button value="4">4</button>
+                <button value="5">5</button>
+                <button value="6">6</button>
+                <button value="1">1</button>
+                <button value="2">2</button>
+                <button value="3">3</button>
+                <button value="0">0</button>
+                <button>.</button>
+                <button>+/-</button>
 
+            </div>
+            <div id="operator-buttons">
+                <button>On</button>
+                <button>Off</button>
+                <button>←</button>
+                <button>C</button>
+                <button value="-">-</button>
+                <button value="+">+</button>
+                <button value="/">/</button>
+                <button value="*">*</button>
+                <button value="!">!</button>
+                <button value="^">^</button>
+                <button value="%">%</button>
+                <button value="=">=</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
