Changing HTML elements to DOM Manipulation

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div id="screen">
 
             <div class="top-screen">
-                <p class="text-top">65</p>
+              <!--  <p class="text-top"></p> -->
             </div>
             <div class="bottom-screen">
-                <p class="text-bottom"></p>
+              <!--  <p class="text-bottom"></p> -->
             </div>
         </div>
         <div id="keypad">
             <div id="numpad-buttons">
-
+              <!--
                 <button value="7">7</button>
                 <button value="8">8</button>
                 <button value="9">9</button>
@@ -33,9 +33,10 @@
                 <button value="0">0</button>
                 <button>.</button>
                 <button>+/-</button>
-
+              -->
             </div>
             <div id="operator-buttons">
+                <!--
                 <button>On</button>
                 <button>Off</button>
                 <button>←</button>
@@ -48,6 +49,7 @@
                 <button value="^">^</button>
                 <button value="%">%</button>
                 <button value="=">=</button>
+                -->
             </div>
         </div>
     </div>
